inclusao do alerta

--- a/Views/Professor/Index.cshtml
+++ b/Views/Professor/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="test-left">
     <div>
-        <h1>Dados dos Professor</h1>
+        <h1>Dados dos Professor(a)</h1>
     </div>
     <table class="table">
         <thead>
