--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem Vindos Aluno(a)!!</h1>
-    <p>O Curso Jovem Programador Esta sendo Maravilhoso Pra Mim!<a href="https://docs.microsoft.com/aspnet/core">Esta sendo uma passo muito Importante.</a>.</p>
+    <p>O Curso Jovem Programador Esta sendo Maravilhoso Pra Mim! Esta sendo uma passo muito Importante..</p>
     
 </div>
 
@@ -14,4 +14,7 @@
     <li><a href="https://www.linkedin.com/in/rubenssilvafilho023/" target="_blank">Linkedin</a></li>
 
 </ul>
+
+
+<img src="https://source.unsplash.com/random" />
  
