--- a/Views/Professor/Index.cshtml
+++ b/Views/Professor/Index.cshtml
@@ -1,36 +1,3 @@
-﻿<div class="test-left">
-    <div>
-        <h1>Dados dos Professor(a)</h1>
-    </div>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Idade</th>
-                <th scope="col">Contato</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Katia</td>
-                <td>xx</td>
-                <td>(47)991608470</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Nilvado</td>
-                <td>xx</td>
-                <td>(47)991608470</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Junior</td>
-                <td>xx</td>
-                <td>(47)991608470</td>
-            </tr>
-        </tbody>
-    </table>
-
+﻿<div>
+    <h1>Dados dos Alunos</h1>
 </div>
